Streampay e2e fix (#66)